# Continuous-Delivery-with-Docker-and-Jenkins-Study-

./: 1. 지속적인 인도 소개.md  2. 도커 소개.md  3. 젠킨스 구성.md  4. 지속적 통합 파이프라인.md  README.md  jenkins_test
git_test/: CMakeLists.txt  Dockerfile  Jenkinsfile  package.xml
git_test/src/ipc_test/: ipc_test1.cpp
